--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </h1>
                 
                 <h3>
-                    Click <a href='https:&#x2F;&#x2F;komeilparseh.io&#x2F;blog'>here</a> to see my posts.
+                    Click <a href='https:&#x2F;&#x2F;komeilparseh.github.io&#x2F;blog'>here</a> to see my posts.
                 </h3>
             </div>
         </section>
