--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="footer">
         <navbar style="margin-left: 1%;">
-            <a href='https:&#x2F;&#x2F;komeilparseh.github.io'>En</a> |
+            <a href='https:&#x2F;&#x2F;komeilparseh.github.io/fa'>Fa</a> |
             <a href='https:&#x2F;&#x2F;komeilparseh.github.io&#x2F;fa'>Main Page</a> |
             <a href='https:&#x2F;&#x2F;komeilparseh.github.io&#x2F;fa&#x2F;blog'>Blog Posts</a> |
             <a href='https://github.com/KomeilParseh/KomeilParseh.github.io'>Source Code</a>
