--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A blog for writing anything related to technology">
     <meta name="keywords" content="blog, opensourse, free, programing, github, gh-pages">
 
-    <title>komeilparseh</title>
+    <title>komeil Parseh's personal blog</title>
     <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-earthly.css" type="text/css">
     <link rel="stylesheet" href="assest/css/style.css">
     <link rel="shortcut icon" type="image/jpg" href="assest/favicon.ico" />
