--- a/fa/index.html
+++ b/fa/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="وبلاگی برای نوشتن از هرچیز مربوط به تکنولوژی">
     <meta name="keywords" content="بلاگ, برنامه نویسی, برنامه‌نویسی, گیت‌هاب, گیت هاب">
 
-    <title>کمیل پارسه</title>
+    <title>وبلاگ شخصی کمیل پارسه</title>
     <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-earthly.css" type="text/css">
     <link rel="stylesheet" href="../assest/css/style.css">
     <link rel="shortcut icon" type="image/jpg" href="../assest/favicon.ico" />
