add google search meta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="A blog for writing anything related to technology">
     <meta name="keywords" content="blog, opensourse, free, programing, github, gh-pages">
-
+    <meta name="google-site-verification" content="o8Ms0tLHYqz-bMsf7xXjCXOwSxqks0mlGBDfRR3Cts0" />
+    
     <title>komeil Parseh's personal blog</title>
     <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-earthly.css" type="text/css">
     <link rel="stylesheet" href="assest/css/style.css">
