--- a/fa/index.html
+++ b/fa/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="footer">
         <navbar style="margin-left: 1%;">
-            <a href='https:&#x2F;&#x2F;komeilparseh.github.io/'>En</a> |
+            <a href='https:&#x2F;&#x2F;komeilparseh.github.io/'>En|
             <a href='https:&#x2F;&#x2F;komeilparseh.github.io&#x2F;fa'>صفحه اصلی</a> |
             <a href='https:&#x2F;&#x2F;komeilparseh.github.io&#x2F;fa&#x2F;blog'>بلاگ</a> |
             <a href='https://github.com/KomeilParseh/KomeilParseh.github.io'>کد منبع صفحه</a>
