--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A blog for writing anything related to technology">
     <meta name="keywords" content="blog, opensourse, free, programing, github, gh-pages">
     <meta name="google-site-verification" content="o8Ms0tLHYqz-bMsf7xXjCXOwSxqks0mlGBDfRR3Cts0" />
-    
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <title>komeil Parseh's personal blog</title>
     <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-earthly.css" type="text/css">
     <link rel="stylesheet" href="assest/css/style.css">
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <a href='https://github.com/KomeilParseh/'><span class="iconify" data-icon="logos-github-icon" data-inline="false"></span></a>
+
     <div class="footer">
         <navbar style="margin-left: 1%;">
             <a href='https:&#x2F;&#x2F;komeilparseh.github.io/fa'>Fa</a> |
