--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <title>404 | page not found</title>
     <link rel="stylesheet" href="assest/css/style.css">
     <link rel="shortcut icon" type="image/jpg" href="assest/favicon.ico" />
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <style>
         .left {
             margin: auto;
