--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    <a href='https://github.com/KomeilParseh/'><span class="iconify" data-icon="logos-github-icon" data-inline="false"></span></a>
+    <a href='https://github.com/KomeilParseh/'><span class="iconify" data-icon="logos-github-icon"
+            data-inline="false"></span></a>
 
     <div class="footer">
         <navbar style="margin-left: 1%;">
