--- a/fa/index.html
+++ b/fa/index.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="بلاگ, برنامه نویسی, برنامه‌نویسی, گیت‌هاب, گیت هاب">
 
     <title>وبلاگ شخصی کمیل پارسه</title>
-    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-earthly.css" type="text/css">
-    <link rel="stylesheet" href="../assest/css/style.css">
-    <link rel="shortcut icon" type="image/jpg" href="../assest/favicon.ico" />
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link rel="stylesheet" href="https://komeilparseh.github.io/assest/css/sakura-earthly.css" type="text/css">
+    <link rel="stylesheet" href="https://komeilparseh.github.io/assest/css/style.css">
+    <meta name="google-site-verification" content="o8Ms0tLHYqz-bMsf7xXjCXOwSxqks0mlGBDfRR3Cts0" />
+    <link rel="shortcut icon" type="image/jpg" href="https://komeilparseh.github.io/assest/favicon.ico" />    <script src="https://komeilparseh.github.io/assest/js/iconify.min.js"></script>
 </head>
 
 <body>
