Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@ darkmode.showWidget();
                 
                 
 
-                <h1>mozlink</h1>
-<p><img alt="logo" src="https://raw.githubusercontent.com/KomeilParseh/mozlink/main/app/static/logo.png"></p>
+                <p align="center">
+
+# mozlink
+
+</p>
+
+<p><img src=https://raw.githubusercontent.com/KomeilParseh/mozlink/main/app/static/logo.png align="right"></p>
 <blockquote>
 <p>A program to build <strong>shortLinks</strong></p>
 </blockquote>
